--- a/lesson6/style/style.css
+++ b/lesson6/style/style.css
@@ -1,60 +1,63 @@
 * {
     box-sizing:border-box;
 }
-html {
-    font-size:62.5%;
+
+body > ul {
+    margin: 20px;
 }
-.menu {
-    font:3.4rem/4.2rem 'Arial Narrow';
-    margin:50px auto;
-    border:.2rem solid black;
-    display:flex;
-    flex-flow:row nowrap;
-    justify-content: space-between;
-    align-items:stretch;
-    width:800px;
-    padding:.5rem 1rem;
-    text-shadow:2px 2px 3px black;
-    box-shadow:inset 2px 2px 3px 10px black;
+
+li {
+    display: inline-block;
+    margin-right: 30px;
+    position: relative;
+
+
 }
-.menu li {
-    border:.2rem solid black;
-    position:relative;
+
+ body li:hover {
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    border-radius: 3px;
 }
-.menu a {
-    color:black;
-    display:block;
-    padding:1rem 1.5rem;
+
+li:hover ul {
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    border-radius: 3px;
 }
-.menu a:hover {
-    background:grey;
-    color:white;
+
+
+li:hover a {
+    color: black;
+    text-decoration: none;
 }
-.menu ul {
-    position:absolute;
-    top:62px;
-    left:-2px;
-    width:300px;
-    border:.2rem solid black;
+
+li li a {
+    display: block;
+
+
+}
+
+li:hover li a {
+    color: #0000FF;
+}
+li:hover li a:hover {
+    color: #FFF;
+    background-color: dodgerblue;
+}
+
+a:visited {
+    color: #0000FF;
+}
+
+
+
+li ul {
+    position: absolute;
+    top: 17px;
     background:white;
-    height:0;
-    overflow:hidden;
+    display: none;
+
 }
-.menu ul li {
-    border:none;
-    border-bottom:.2rem solid black;
-}
-.menu ul li:last-child {
-    border:none;
-}
-.menu > li:hover > ul {
-    height:auto;
-    overflow:visible;
-}
-.menu ul ul {
-    left:296px;
-    top:-2px;
-}
-.menu ul li:hover ul {
-    display:block;
+
+li:hover ul {
+    display: block;
 }
