--- a/lesson16/styles/style.css
+++ b/lesson16/styles/style.css
@@ -1,11 +1,120 @@
+/*Global----------------------
+----------------------------*/
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font: 1.2rem/1.8rem 'Open Sans';
+    background-color: #111111;
+    margin: 0 auto;
+}
+
+img {
+
+/*
+    width: 100%;
+    max-width: 100%;
+*/
+
+}
+
+.container {
+    margin: 0 auto;
+    position: relative;
+    background-color: beige;
+}
+
+
+/*Slider------------------
+------------------------*/
+
 .slider img {
-    -display: block;
+    margin: 0 auto;
 }
 
 .slick-dots {
-    bottom: 100px;
+    bottom: 10%;
+}
+
+.slick-dots li button:before {
+    font-size: 12px;
 }
 
 .slick-dots li.slick-active button:before {
     color: #b7b7b7;
+}
+
+
+/*Header--------------------
+--------------------------*/
+
+.headerOrion {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    z-index: 2;
+    width: 100%;
+}
+
+/*Logo-----------------*/
+.logoSprite {
+    background-image: url(../img/orion.png);
+    background-repeat: no-repeat;
+    display: inline-block;
+}
+
+.sprite-I {
+    width: 27px;
+    height: 26px;
+    background-position: -5px -5px;
+}
+
+.sprite-N {
+    width: 26px;
+    height: 26px;
+    background-position: -42px -5px;
+}
+
+.sprite-O {
+    width: 27px;
+    height: 26px;
+    background-position: -78px -5px;
+}
+
+.sprite-R {
+    width: 27px;
+    height: 26px;
+    background-position: -115px -5px;
+}
+
+/*Nav--------------*/
+.nav,
+.navList a {
+    color: #fff;
+}
+
+.humb:before {
+    content: "\2261";
+    font: 5rem "arial";
+}
+
+
+
+@media screen and (min-width:768px) {
+    .grid {
+        padding: 0 3%;
+    }
+}
+
+@media screen and (min-width:1170px) {
+    .grid {
+        padding: 0 7.5%;
+        max-width: 1350px;
+    }
 }
