--- a/main-test/styles/style.css
+++ b/main-test/styles/style.css
@@ -38,7 +38,7 @@ img {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 10vh;
+
     padding: 0 5vw;
 
 }
@@ -46,9 +46,23 @@ img {
 
 /*Logo-----------------*/
 .header .logo{
-    height: 7vh;
-    background-color: aqua;
-    background-image:  url(../img/design/logo.png);
+    width: 206px;
+    height: 59px;
+    background-image: url(../img/design/logo.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+}
+
+.logo::before {
+    position: absolute;
+    right: 0;
+    content: '';
+	width: 25px;
+    height: 25px;
+    background-image: url(../img/design/menu-copy-3.png);
+    background-position: center;
+    background-color:coral;
 }
 
 /*Nav--------------*/
